web-infras/parser/tests/fixtures/self-added/let-as-identifier/module/let-as-value-in-pattern-1/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,6)
1|var [let] = [];
 |    ^
